Notes/KubernetesAuthoritativeGuideBookNotes/CH04 Service/SE06 Ingress 7 Layer Route Framework/3 Ingress Policy Set Indetail.yaml/ingress-nodomain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - http:
    paths:
    - path: /demo
      pathType: Prefix
      backend:
        service:
          name: webapp
          port:
            number: 8080
