Notes/KubernetesAuthoritativeGuideBookNotes/CH04 Service/SE06 Ingress 7 Layer Route Framework/3 Ingress Policy Set Indetail.yaml/ingress-single-backend-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  defaultBackend:
    service:
      name: webapp
      port:
        number: 8080
